src/css/styles.css
html {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}
*, *:before, *:after {
  box-sizing: inherit;
}
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: 'Fira Mono', monospace;
  font-size: 14px;
  line-height: 14px;
  background: #fff;
  color: #000;
}
.right {
  float: right;
}
.left {
  float: left;
}
svg {
  fill: currentColor;
}
.centered {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.mt1 {
  margin-top: 1em !important;
}
.mb1 {
  margin-bottom: 1em !important;
}
.mb3 {
  margin-bottom: 3em !important;
}
.p1 {
  padding: 1em !important;
}
.p2 {
  padding: 2em !important;
}
.fs08 {
  font-size: .8em;
}
.clear::after {
  content: " ";
  display: block;
  clear: both;
}
/*************************** APP main */
.app {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 8000;
}
.app.dark {
  background: #20303a;
  color: #fefefe;
}
.app .layout {
  height: calc(100% - 8px);
  transition: height 200ms ease-out;
}
/*************************** GRID */
.gutter.gutter-horizontal {
  cursor: ew-resize;
  float: left;
  height: 100%;
  background: #eaeaea;
}
.gutter.gutter-vertical {
  cursor: ns-resize;
  width: 100%;
  background: #eaeaea;
}
.dark .gutter.gutter-horizontal, .dark .gutter.gutter-vertical {
  background: #2e414c;
}
/*************************** CODE EDITOR */
.editor-section {
  vertical-align: top;
  height: 100%;
}
/*************************** CODE MIRROR */
.CodeMirror {
  height: 100%;
  transition: opacity 300ms;
  -webkit-transition: opacity 300ms;
  opacity: 1;
}
.CodeMirror-lines {
  padding: 1em;
}
.CodeMirror-selected  {
  background-color: #fff !important;
}
/*************************** OUTPUT PANEL */
.output {
  overflow: hidden;
}
/*************************** CONSOLE */
.console {
  font-size: 0.9em;
  line-height: 1em;
  position: relative;
  overflow: auto;
  transition: opacity 300ms ease-out;
  -webkit-transition: opacity 300ms ease-out;
  opacity: 0;
}
.console p {
  margin: 0;
  padding: 1em;
  white-space: pre-wrap;
  border-bottom: dotted 1px #f3f3f3;
  line-height: 1.6em;
  font-size: 1em;
  opacity: .9;
}
.dark .console p {
  border-bottom: dotted 1px #2f4654;
}
/*************************** JS EDITOR */
.js-code-editor {
  height: 100%;
  width: 100%;
  overflow: auto;
  line-height: 1.3em;
  float: left;
  z-index: 90;
}
/*************************** STATUS BAR */
.status-bar {
  width: 100%;
  height: 6px;
  background: #ccc;
  transition: height 200ms ease-out;
  overflow: hidden;
}
.dark .status-bar {
  background: #000;
}
.status-bar > div {
  display: none;
}
.status-bar a {
  display: inline-block;
	color: #000;
	text-decoration: none;
	padding: 10px 8px 8px 8px;
  cursor: pointer;
  opacity: 0.7;
  overflow: hidden;
  position: relative;
  line-height: 1.2em;
}
.dark .status-bar a {
  color: #a5a5a5;
}
.status-bar a:hover {
  color: #4c0000;
}
.dark .status-bar a:hover {
  color: #7b6d6d;
}
.status-bar a.active {
  font-weight: bold;
  opacity: 1;
}
.status-bar a svg {
  transform: translateY(1px);
  -webkit-transform: translateY(1px);
}
.status-bar a img {
  transform: translateY(-2px);
  -webkit-transform: translateY(-2px);
}
.status-bar .entry span::before {
  content: " ✔ ";
  font-size: 0.8em;
}
.status-bar .file::before, .status-bar .new-file::before {
  content: "";
  display: block;
  width: 1px;
  height: 18px;
  background: #999;
  position: absolute;
  top: 9px;
  left: 0;
}
.dark .status-bar .file::before, .dark .status-bar .new-file::before {
  background: #4e4e4e;
}
.status-bar .file::after {
  display: block;
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  width: 20%;
  content: "";
  background: linear-gradient(
      to left,
     rgba(204, 204, 204, 1) 20%, 
     rgba(204, 204, 204, 0) 80%
  );
  pointer-events: none;
}
.dark .status-bar .file::after {
  background: linear-gradient(
      to left,
     rgba(0, 0, 0, 1) 20%, 
     rgba(0, 0, 0, 0) 80%
  );
}
.status-bar a.file svg {
  margin-right: 3px;
}
.dark .status-bar .file.entry::before {
  border-color: #7b7b7b;
}
.status-bar .name {
  text-align: center;
  font-size: 0.9em;
  font-style: italic;
  opacity: 0.4;
}
.status-bar-menu {
  position: absolute;
  display: none;
  top: 47px;
  right: 30px;
  background: #cccccc;
  font-size: 0.8em;
  padding: 1em;
  z-index: 9;
  border-radius: 4px;
}
.status-bar-menu::before {
  position: absolute;
  display: block;
  content: "";
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid #cccccc;
  top: -7px;
  right: 5px;
}
.status-bar-menu.right::before {
  left: auto;
  right: 5px;
}
.dark .status-bar-menu {
  background-color: #000;
  border-color: #2b2b2b;
}
.dark .status-bar-menu::before {
  border-bottom: 10px solid #000;
}
.status-bar-menu a {
  display: block;
  color: inherit;
  text-decoration: none;
  padding-bottom: 8px;
}
.status-bar-menu a:hover {
  color: #4c0000;
}
.dark .status-bar-menu a:hover {
  color: #7b6d6d;
}
.status-bar-menu a img, .status-bar-menu a svg {
  transform: translateY(6px);
  -webkit-transform: translateY(4px);
}
.status-bar-menu a + a {
  padding-top: 8px;
  border-top: solid 1px #afafaf;
}
.status-bar-menu a:last-child {
  padding-bottom: 0;
}
.dark .status-bar-menu a + a {
  border-top: solid 1px #292929;
}
.meta-and-status {
  text-align: center;
  padding: 10px 8px 8px 8px;
  font-size: 0.9em;
}
.meta-and-status .badge {
  font-size: 0.8em;
  padding: 2px 4px;
  border-radius: 2px;
  display: inline;
  background: #e2e2e2;
}
.dark .meta-and-status .badge {
  background: #292929;
}
.meta-and-status .badge.info {
  background: #bbd5ef;
}
.meta-and-status .badge.ok {
  background: #b6eab6;
}
.meta-and-status .badge.warning {
  background: #e2b5b5;
}
.dark .meta-and-status .badge.info {
  background: #1f476f;
}
.dark .meta-and-status .badge.ok {
  background: #164216;
}
/* ... */

